k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ng-go-playground
---
apiVersion: v1
kind: Namespace
metadata:
  name: redis
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
apiVersion: v1
kind: Namespace
metadata:
  name: consul
---
apiVersion: v1
kind: Namespace
metadata:
  name: storage
#---
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: grafana
#---
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: mysql
