k8s/base/ingress.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx
#spec:
#  selector:
#    app: nginx
#  ports:
#    - port: 8080
#  type: NodePort
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: acmo.io
      http:
        paths:
          - path: /api/projects
            pathType: Exact
            #            pathType: Exact
            #            pathType: ImplementationSpecific
            backend:
              service:
#                name: users-client-service
                name: users-api-service
                port:
                  number: 3333
#      host: acmo.io
#    - http:
#        paths:
#          - path: /api/users
#            #            pathType: ImplementationSpecific
#            pathType: Exact
#            backend:
#              service:
#                name: users-api-service
#                port:
#                  number: 3333
#      host: acmo.io
#    - http:
#        paths:
#          - path: /
#            #            pathType: ImplementationSpecific
#            pathType: Prefix
#            backend:
#              service:
#                name: users-client-service
#                port:
#                  number: 80
#      host: acmo.io
      #    - http:
      #        paths:
      #          - path: /api/users
      #            #            pathType: ImplementationSpecific
      #            pathType: Prefix
      #            #            pathType: Exact
      #            backend:
      #              service:
      #                name: users-api-service
      #                port:
      #                  number: 3333
#      host: acmo.io
#      host: dev.devops-toolkit.192.168.49.2.nip.io
